Update gauss_elimination.tex, loesning_til_lineaer.tex, and span.tex

--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/gauss_elimination.tex
@@ -4,33 +4,34 @@
 % Sætning 1.4 kan vi bevise den
 En algoritme til løsning af lineære ligningssystemer er  \textit{rækkereduktionsalgoritmen}, som reducerer en totalmatrix til reduceret trappeform.
 Når den bruges til at løse lineære ligningssystemer, kaldes denne proces for \textit{Gauss-elimination}.
-I algoritmen bruges de elementære rækkeoperationer til at omdanne en matrix $A$ til trappeform. 
+I algoritmen bruges de elementære rækkeoperationer til at omdanne en matrix til trappeform. 
 Herefter benyttes rækkeoperationerne til at reducere matricen til reduceret trappeform.
 Algoritmen gennemgår således følgende skridt:
 %
 \begin{enumerate}
-\item Find første ikke-nulsøjle i $A$ fra venstre.
+\item Find første ikke-nulsøjle fra venstre i matricen.
 \item Ved rækkeombytning placeres en ikke-nulindgang øverst i pivotsøjlen.
 \item Skab nuller under pivotindgangen ved hjælp af rækkeudskiftning.
-\item Øverste række markeres som afsluttet og trin $1-4$ gennemføres nu på den næste række. Indtil alle rækker er markeret som afsluttet.
+\item Øverste række markeres som afsluttet og trin $1-4$ gennemføres nu på den næste række.
+Dette gentages, indtil alle rækker er markeret som afsluttet.
 \item Alle rækker med pivotindgange skaleres, så alle pivotindgange er lig $1$.
-\item Ved rækkeudskiftning sikres nu $0$'er over og under pivotindgangene.
+\item Ved rækkeudskiftning sikres nu nulindgange over og under pivotindgangene.
 \end{enumerate}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Eksempel
 \begin{eks}
-Betragt ligningssystemet 
+Betragt ligningssystemet fra \ref{eks:lignsys}
 %
 \begin{align*}
 \begin{array}{rlr}
 x_1-x_3-2x_4-8x_5    &=  &-3 \\
 -2x_1+x_3+2x_4+9x_5  &=  &5 \\
-3x_1-2x_3-3x_4-15x_5 &=  &-9 
+3x_1-2x_3-3x_4-15x_5 &=  &-9.
 \end{array}
 \end{align*}
 %
-Ligningssystemet opskrevet som totalmatrix $[A \text{   }|\text{ }\mathbf{b}]$ er
+Ligningssystemet opskrevet som totalmatrix $[A \mid \mathbf{b}]$ er
 %
 \begin{equation*}
 A=
@@ -41,7 +42,7 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 -2 & 0 & 1 & 2 & 9 & 5 \\
 3 & 0 & -2 & -3 & -15 & -9 \\
 \end{block}
-\end{blockarray}
+\end{blockarray}.
 \end{equation*}
 %
 De elementære rækkeoperationer benyttes nu med henblik på at reducere totalmatricen til trappeform.
@@ -70,7 +71,7 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \end{blockarray}
 \end{equation*}
 %
-Det fortsættes nu med henblik på at opnå totalmatricen fra trappeform til reduceret trappeform.
+Algoritmen fortsættes nu med henblik på at opnå totalmatricen fra trappeform til reduceret trappeform.
 %
 \begin{equation*}
 \xrightarrow[R_2 \rightarrow R_2+2R_3]{R_1 \rightarrow R_1+2R_3}
@@ -113,12 +114,12 @@ Herefter kan følgende løsninger opskrives:
 \begin{align*}
 \begin{array}{rrcll}
 x_1-x_5     =&-2   &\iff &x_1   =&x_5-2 \\
-x_3-3x_5    =&3    &\iff &x_3   =&-3x_5+3 \\
-x_4+2x_5    =&-1   &\iff &x_4   =&-2x_5-1 
+x_3 + 3x_5    =&3    &\iff &x_3   =&-3x_5+3 \\
+x_4+2x_5    =&-1   &\iff &x_4   =&-2x_5-1.
 \end{array}
 \end{align*}
 %
-Parameterfremstillingen for løsningen i $\R^5$ er dermed
+Løsningen, opskrevet som en parameterfremstilling, er dermed
 %
   \begin{align*}
     \mathbf{x} &= \begin{bmatrix}
@@ -148,7 +149,7 @@ Parameterfremstillingen for løsningen i $\R^5$ er dermed
            -3 \\
            -2 \\
            1 \\
-         \end{bmatrix}
+         \end{bmatrix}.
   \end{align*} 
 %
 \label{eks_gauss}
@@ -165,48 +166,35 @@ Parameterfremstillingen for løsningen i $\R^5$ er dermed
 %
 \subsection{Rang og nullitet}
 % 
-For at beskrive en matrices egenskaber i forhold til pivotindgange er der brug for at definere nogle begreber. 
+For at beskrive matricers egenskaber i forhold til pivotindgange er der brug for at definere \textit{rang} og \textit{nullitet}.
 %
 \begin{defn}{}{rangnull}
-\textbf{Rangen} af en matrix $A$ er antallet af pivotindgange, hvilket noteres $\text{rang}(A)$. \\
+\textbf{Rangen} af en matrix $A$ er antallet af pivotindgange, hvilket noteres $\text{rang}(A)$.
 \textbf{Nulliteten} af $A$ er antallet af søjler uden pivotindgang, hvilket noteres $\text{null}(A)$.
 \end{defn}
 %
 \noindent
-Bemærk, at der for en $m \times n$ matrix gælder, at $\text{rang}(A)+\text{null}(A)=n$. 
-% . 
+Bemærk, at der for en $m \times n$ matrix gælder, at $\text{rang}(A)+\text{null}(A)=n$.\\
 %
-Med udgangspunkt i matrix $A$ på reduceret trappeform fra \ref{eks_gauss} bliver rang og nullitet i 
+\begin{eks}
+Med udgangspunkt i matrix $A$ på reduceret trappeform fra \ref{eks_gauss} bliver rang og nullitet i således $\text{rang}(A)=3$ og $\text{null}(A)=3$.
+\end{eks}
 %
-\begin{align*}
-A=\begin{blockarray}{ccccccc}
-x_1 & x_2 & x_3 & x_4 & x_5 & b \\
-\begin{block}{[ccccc|c]c}
-  \hlight{1} & 0 & 0 & 0 & -1 & -2 \\
-  0 & 0 & \hlight{1} & 0 & 3 & 3 \\
-  0 & 0 & 0 & \hlight{1} & 2 & -1 \\
-\end{block}
-\end{blockarray},
-\end{align*}
-således $\text{rang}(A)=3$ og $\text{null}(A)=3$. 
-%
-% Hvilket er heldigt når der er 6 søjler
-%
-\begin{thm}{Konsistens}{konsistens}
+\begin{thm}{}{konsistens}
 %
 Følgende udsagn er ækvivalente:
 %
 \begin{enumerate}[label=(\alph*)]
-\item Matricen $A\mathbf{x}=\mathbf{b}$ er konsistent.
+\item Ligningssystemet $A\mathbf{x}=\mathbf{b}$ er konsistent.
 \item Vektoren $\mathbf{b}$ er en linearkombination af søjlerne i $A$.
-\item Den reducerede trappeform af totalmatricen $[A \text{   }| \text{ }\mathbf{b}]$ har ingen rækker på formen $[ 0 \ldots 0 \text{  }| \text{ } d  ]$, hvor $d \neq 0$.
+\item Den reducerede trappeform af totalmatricen $[A \mid \mathbf{b}]$ har ingen rækker på formen $[ 0 \ldots 0 \mid d ]$, hvor $d \neq 0$.
 \end{enumerate}
 %
 \end{thm}
 %
 \begin{proof}
 %
-Lad $A$ være en $n \times m$ matrix og $\mathbf{b} \in \R^m$. Jævnfør \ref{defn:mvp} følger det, at der eksisterer en vektor 
+Lad $A$ være en $m \times n$ matrix og $\mathbf{b} \in \R^m$. Jævnfør \ref{defn:mvp} følger det, at der eksisterer en vektor 
 %
 \begin{align*}    
        \mathbf{v} = \begin{bmatrix}
@@ -217,17 +205,28 @@ Lad $A$ være en $n \times m$ matrix og $\mathbf{b} \in \R^m$. Jævnfør \ref{de
         \end{bmatrix},  
 \end{align*}
 %
-i $\R^n$, der opfylder, at $A\mathbf{v}=\mathbf{b}$, hvis og kun hvis $$v_1 \mathbf{a}_1+v_2 \mathbf{a}_2 + \ldots + v_n \mathbf{a}_n \text{, }$$ hvilket er linearkombinationen af matricen og vektoren. 
-Det følger derfor, at (a) og (b) er ækvivalente.
+i $\R^n$, der opfylder $A\mathbf{v}=\mathbf{b}$,
+hvilket er linearkombinationen
+%
+$$v_1 \mathbf{a}_1+v_2 \mathbf{a}_2 + \ldots + v_n \mathbf{a}_n = \textbf{b}$$
+%
+af $A$ og $\textbf{v}$. 
+Det følger derfor, at (a) og (b) er ækvivalente.\\\\
+%
 Herefter bevises, at (a) og (c) er ækvivalente. 
-Hvis (c) er falsk, følger det, at  $$0 x_1+0 x_2 + \ldots + 0x_n =d,$$ hvor $d\neq0$. Da dette ikke har nogen løsning, følger det, at ligningssystemet således bliver inkonsistent. 
+Hvis (c) er falsk, følger det, at
+%
+$$0 x_1+0 x_2 + \ldots + 0x_n =d,$$
+%
+hvor $d\neq0$. Da dette ikke har nogen løsning, følger det, at ligningssystemet således bliver inkonsistent. 
 Såfremt (c) er sandt, gælder der omvendt, at alle rækker i den reducerede trappeform indeholder en løsning, som også er løsning til $A\mathbf{x}=\mathbf{b}$. 
 Således er (a) og (c) ækvivalente.
 %
 \end{proof}
 \\
 %
-Med udgangspunkt i \ref{eks_gauss} ses derfor, at $A$ er konsistent, da $d$ ikke er en pivotindgang. Såfremt ligningssystemet skulle være inkonsistent, kunne den have formen
+\begin{eks}
+Med udgangspunkt i \ref{eks_gauss} ses derfor, at ligningssystemet for $A\textbf{x}=\textbf{b}$ er konsistent, da $d$ ikke er en pivotindgang. Såfremt ligningssystemet skulle være inkonsistent, kunne den have formen
 %
 \begin{align*}
 B=\begin{blockarray}{ccccccc}
@@ -241,5 +240,5 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \end{align*}
 %
 hvor $d \neq 0$ er i indgang $b_{3,6}$. 
-Det følger derfor også, at der ikke kan opnås dette $b$, da det ikke kan laves som linearkombination af søjlerne. 
 %
+\end{eks}
